# ryzenai_crash

./: CMakeLists.txt  main.cpp
onnxruntime/: readme.txt  vaip_config.json
onnxruntime/include/onnxruntime/core/session/: dml_provider_factory.h  environment.h  onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h
